# deindent

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  args.c  args.h  deindent.c  deindent.h  deindent_test.c  deindent_version.in.h  deindent_version.in.txt  main.c  test.sh  util.c  util.h  util_test.c
.changes/: 1.0.0.md  1.1.0.md  1.2.0.md
